--- a/swagger-ui/index.html
+++ b/swagger-ui/index.html
@@ -39,7 +39,7 @@
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
         // url: "https://petstore.swagger.io/v2/swagger.json",
-        url: "../../../../php-crud-api.php/openapi",
+        url: "../../../../var/cache/openapi.json",
         dom_id: '#swagger-ui',
         deepLinking: true,
         presets: [
