update api test pages

--- a/playground/index.html
+++ b/playground/index.html
@@ -52,7 +52,10 @@
     window.addEventListener('load', function (event) {
       GraphQLPlayground.init(document.getElementById('root'), {
         // options as 'endpoint' belong here
-        endpoint: '../../../../gql.php'
+        endpoint: '../../../../gql.php',
+        settings: {
+          'request.credentials': 'same-origin'
+        }
       })
     })
   </script>
